Fix bottom margin not showing for latest message

--- a/Chatbox_css.css
+++ b/Chatbox_css.css
@@ -123,6 +123,7 @@ body {
   padding-right: 20px;
   padding-left: 20px;
   margin-top: -10px;
+  margin-bottom: 10px;
   -webkit-clip-path: polygon(100% 0, 100% 80%, 95% 100%, 0 100%, 0 0);
   clip-path: polygon(100% 0, 100% 80%, 95% 100%, 0 100%, 0 0);
 }
@@ -169,7 +170,7 @@ body {
   margin-top: 20px;
   margin-left: 13px;
   margin-right: 13.5px;
-  margin-bottom: -1.5px;
+  margin-bottom: 8.5px;
   top: 0px;
   left: 0px;
   right: 0px;
